# sand_table

./: .gitignore  CMakeLists.txt
include/: GCReader.h  Motor.h  PatternReader.h  StepSequence.h  Table.h  config.h  hardware_config.h
patterns/: sandify.gcode
src/: GCReader.cpp  Motor.cpp  PatternReader.cpp  Table.cpp
test/: a.out  a1.out  config.h  pi_stepper.cpp  reader.cpp  server_test.cpp  test.cpp  test_callable.cpp  thread_test.cpp
test2/: CMakeLists.txt
test2/include/: Motor.h  config.h
test2/src/: Motor.cpp  main.cpp
